# kuka_lwr_fri_library

./: CMakeLists.txt  README.md  package.xml
config/: 980039-FRI-Driver.init
experiments/data/: 10102019_1st_learning_instantenious_data.txt  10102019_1st_learning_lp.txt  10102019_1st_learning_reward.txt  10102019_2nd_learning_instantaneous_data.txt  10102019_3rd_learning_pp.txt  10102019_3rd_learning_r.txt
experiments/notebooks/: plot.ipynb
experiments/notebooks/.ipynb_checkpoints/: plot-checkpoint.ipynb
experiments/test_report/: safety_procedure.md  test_report_tmp.md
include/: Console.h  DataLogging.h  FRICommunication.h  FastResearchInterface.h  FastResearchInterfaceTest.h  InitializationFileEntry.h  LWRBaseControllerInterface.h  LWRCartImpedanceController.h  LWRJointImpedanceController.h  LWRJointPositionController.h  LinuxAbstraction.h  OSAbstraction.h  TypeIRML.h  TypeIRMLDecision.h  TypeIRMLInputParameters.h  TypeIRMLMath.h  TypeIRMLOutputParameters.h  TypeIRMLPolynomial.h  TypeIRMLProfiles.h  TypeIRMLVector.h  UDPSocket.h
launch/: calib.launch  dignose.launch
ros/src/: ros_interface.cpp
scripts/FastResearchInterfaceTest/: FastResearchInterfaceTest.cpp  calibration.cpp  cart_test.cpp  ft_calib.cpp  ros_test.cpp
scripts/LWRGettingStartedExamples/: LWRCartImpedanceControlExample.cpp  LWRJointImpedanceControlExample.cpp  LWRJointPositionControlExample.cpp  LWRLoggingExample.cpp  LWR_Cart_impedence_ros.cpp  RLUtils.hpp  cpp_test.cpp
scripts/python/: 1570544138.43_0809_exp.yaml  1570544810.86_0809_exp.yaml  1570545505.61_0809_exp.yaml  1570714227.23_0809_exp.yaml  1570716669.12_0809_exp.yaml  1570784747.4_0809_exp.yaml  1570885750.14_0809_exp.yaml  1570890025.16_0809_exp.yaml  RL.py  Untitled.ipynb  Untitled1.ipynb  data_collection.py
scripts/python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/FastResearchInterfaceLibrary/: Console.cpp  DataLogging.cpp  FastResearchInterface.cpp  GetCompleteRobotStateAndInformation.cpp  GetRobotControlData.cpp  GetRobotStatusData.cpp  GetUDPCommunicationData.cpp  InitializationFileEntry.cpp  KRCCommunicationThreadMain.cpp  LinuxAbstraction.cpp  LoggingMethods.cpp  MoveToCandle.cpp  ReadInitFile.cpp  RunTrajectorySimple.cpp  SetControlScheme.cpp  SetRobotControlData.cpp  SetRobotStatusData.cpp  StartRobot.cpp  StopRobot.cpp  TimerThreadMain.cpp  UDPSocket.cpp  WaitForTicks.cpp  calib_motion.cpp
src/FastResearchInterfaceLibrary/TypeIRML/: TypeIRML.cpp  TypeIRMLDecision.cpp  TypeIRMLMath.cpp  TypeIRMLPolynomial.cpp  TypeIRMLProfiles.cpp
